[package]
name = "zeronet_tracker"
version = "0.1.12"
authors = ["Ansho Rei <anshorei@protonmail.com>"]
edition = "2018"
description = "A ZeroNet tracker written in Rust."
documentation = "http://www.github.com/Anshorei/zeronet_tracker"
readme = "README.md"
homepage = "http://www.github.com/Anshorei/zeronet_tracker"
repository = "http://www.github.com/Anshorei/zeronet_tracker"
license = "WTFPL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
server = ["maud", "rocket"]
tor = ["zeronet_protocol/tor"]
i2p = ["zeronet_protocol/i2p"]

[dependencies]
zeronet_protocol = "~0.1.7"
futures = "~0.3"
log = "~0.4"
pretty_env_logger = "~0.4"
serde = { version = "~1.0", features = [ "derive" ] }
serde_json = "~1.0"
serde_bytes = "~0.11"
base64 = "~0.13"
clap = { version = "~3.0", features = [ "cargo", "env" ] }

maud = { version = "~0.23", features = ["rocket"], optional = true }
rocket = { version = "~0.4", optional = true }
rocket_contrib = "~0.4"
